# redshift

./: CMakeLists.txt  _.h  colorramp.cpp  colorramp.h  config-ini.c  config-ini.h  deployment.rc  framework.h  gamma-drm.c  gamma-drm.h  gamma-dummy.h  gamma-quartz.cpp  gamma-quartz.h  gamma-randr.cpp  gamma-randr.h  gamma-vidmode.c  gamma-vidmode.h  gamma-w32gdi.cpp  gamma-w32gdi.h  hooks.c  location-corelocation.h  location-geoclue.c  location-geoclue.h  location-geoclue2.c  location-geoclue2.h  location-manual.h  redshift.c  redshift.cpp  redshift.def  redshift.vcxproj  redshift.vcxproj.filters  signals.c  signals.h  systemtime.c
include/redshift/: gamma.h  redshift.h
redshift-gtk/: statusicon.py
redshift.xcodeproj/: project.pbxproj
